# internal/core/openapi.spec.yaml
@@ -423,11 +423,14 @@ components:
           type: string
         immutable:
           type: boolean
+        config:
+          type: string
       required:
         - name
         - stack_id
         - provider
         - driver
+        - config
         - immutable
 
     ResourceListResponse:
@@ -587,9 +590,11 @@ components:
           format: uuid
           x-go-name: StackID
           x-go-type: gocql.UUID
-        driver:
+        config:
           type: string
-          description: 's3, sqs, sns, dynamodb, postfres, mysql etc'
+          description: 'resource configruation e.g properties, output environment variables etc'
+        driver:
+          $ref: '#/components/schemas/Driver'
         is_immutable:
           type: boolean
         provider:
@@ -607,6 +612,7 @@ components:
         - repo_id
         - driver
         - provider
+        - config
         - created_at
         - updated_at
 
@@ -737,6 +743,33 @@ components:
         - aws
         - azure
         - default
+
+    GCPDriver:
+      type: string
+      description: 'gke, cloudrun, pubsub etc'
+      enum:
+        - gke
+        - cloudrun
+        - pubsub
+
+    AWSDriver:
+      type: string
+      description: 's3, sqs, sns, dynamodb, postgres, mysql etc'
+      enum:
+        - s3
+        - sns
+        - sqs
+
+    Driver:
+      type: string
+      description: 'gke, cloudrun, pubsub, s3, sqs, sns, dynamodb, postgres, mysql etc'
+      enum:
+        - gke
+        - cloudrun
+        - pubsub
+        - s3
+        - sns
+        - sqs
 
   responses:
     NotFound:
